<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Tarea Cibertec</string>

    <string name="title_activity_visitante">Visitante</string>
    <string name="title_activity_agenda">Agenda</string>
    <string name="title_activity_ficha_usuario">Bienvenido Usuario</string>
    <string name="title_activity_nueva_tarea">Nueva tarea</string>
    <string name="title_activity_usuario">Acceso Usuario</string>

    <string name="action_settings">Settings</string>
    <string name="seleccionar_tipo_usuario">Seleccione tipo de usuario:</string>
    <string name="usuario">Usuario</string>
    <string name="visitante">Visitante</string>
    <string name="hello_world">Hello world!</string>
    <string name="lblUsuario">Ingrese Usuario</string>
    <string name="lblNombre">Ingrese Nombre</string>
    <string name="lblPassword">Ingrese Password</string>
    <string name="Confirme_password">Confime Password</string>
    <string name="crear_usuario">Crear Usuario</string>
    <string name="nombre_usuario">Nombre Usuario:</string>
    <string name="NombreArchivoPreferenciasXML">com.example.matt.tarea1.nombreArchivoPreferencias</string>
    <string name="usuario2">Usuario:</string>
    <string name="password2">Password:</string>
    <string name="ver_pendientes">Ver Pendientes</string>
    <string name="actualizar_usuario">Actualizar Usuario</string>
    <string name="ingrese_nombre_tarea">Ingrese nombre tarea</string>
    <string name="ingrese_desc_tarea">Ingrese descripción tarea</string>
    <string name="tarea_fecha">Fecha</string>
    <string name="ingrese_fecha">Ingrese fecha</string>
    <string name="hora">Hora</string>
    <string name="ingrese_hora">Ingrese hora</string>
    <string name="btn_guardar">Guardar</string>
    <string name="btn_cancelar">Cancelar</string>
    <string name="user_pass_incorrecto">Usuario/Contraseña errada</string>
    <string name="prioridad">Prioridad</string>

    <string-array name="prioridad_tarea_array">
        <item>Alta</item>
        <item>Media</item>
        <item>Baja</item>
    </string-array>

</resources>
