<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.matt.tarea1.AgendaTareaActivity">

    <!-- Tarea nombre -->
    <EditText
        android:id="@+id/txtNombreTareaNew"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/ingrese_nombre_tarea"
        android:ems="20" />

    <!-- Tarea descripcion -->
    <EditText
        android:id="@+id/txtDescripcionTareaNew"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/ingrese_desc_tarea"
        android:gravity="top"
        android:inputType="textMultiLine"
        android:lines="5"
        android:ems="20"
        android:layout_below="@id/txtNombreTareaNew"/>

    <!-- Tarea fecha -->
    <TextView
        android:id="@+id/lblFechaTareaNew"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tarea_fecha"
        android:layout_below="@id/txtDescripcionTareaNew"/>
    <EditText
        android:id="@+id/txtFechaTareaNew"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/ingrese_fecha"
        android:ems="10"
        android:layout_toRightOf="@+id/lblFechaTareaNew"
        android:layout_below="@id/txtDescripcionTareaNew"
        android:onClick="abrirDatePicker"
        />

    <!-- Tarea hora -->
    <TextView
        android:id="@+id/lblHoraTareaNew"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hora"
        android:layout_below="@id/txtFechaTareaNew"/>
    <EditText
        android:id="@+id/txtHoraTareaNew"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/ingrese_hora"
        android:ems="10"
        android:layout_below="@+id/txtFechaTareaNew"
        android:layout_alignStart="@+id/txtFechaTareaNew"
        android:onClick="abrirTimePicker"/>

    <Button
        android:id="@+id/btnGuardarTareaNew"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="accion_guardar_tarea"
        android:layout_below="@+id/txtHoraTareaNew"
        android:layout_alignParentStart="true"
        android:text="@string/btn_guardar"
        style="@style/Botones"
        />

</RelativeLayout>
